--- a/src/components/section5/TestimonialSlider.css
+++ b/src/components/section5/TestimonialSlider.css
@@ -39,6 +39,7 @@ top: 454px;
   text-align: center;
   align-items: center; 
   font-family: Matter, sans-serif;
+  border-bottom: 1px solid #908f8f3e;
 
 }
 .loremipsum{
