--- a/src/components/Footerpage/About.css
+++ b/src/components/Footerpage/About.css
@@ -1,6 +1,6 @@
 
 .about-us-container11 {
-    padding: 70px;
+   
     
     color: #333;
     margin-bottom: 30px;
@@ -9,7 +9,9 @@
 
 .top-section11 {
     display: flex;
+    justify-content: center;
     margin-bottom: 40px;
+    margin: 50px;
 }
 
 .image-group11 {
@@ -49,6 +51,7 @@
 
 .bottom-images11 {
     display: flex;
+    justify-content: space-around;
     gap: 10px;
 }
 
@@ -97,10 +100,12 @@ padding-left: 10px;
     display: flex;
     align-items: center !important;
     
-   
+   display: flex;
+   justify-content: center;
     padding: 20px;
     border-radius: 8px;
     margin-top: 50px;
+    margin: 50px;
 }
 
 .mission-content11 {
@@ -166,8 +171,7 @@ padding-left: 10px;
 }
 
 .top-image211{
-    width:
-    276px !important;
+    width:  276px !important;
     height:170px !important;
     object-fit: cover;
 
@@ -179,8 +183,10 @@ padding-left: 10px;
 .top-image311{
     width:276px!important;
     height:308px !important;
-    margin-top: -170px;
+    
     object-fit: cover;
+   margin-top: -160px;
+
 
 
 }
@@ -256,7 +262,10 @@ padding-left: 10px;
 .key-problems-section11 {
     display: flex;
     justify-content: space-between;
+   gap: 30px;
     margin-top: 40px;
+    margin-left: 40px;
+   
    
 }
 
@@ -329,7 +338,9 @@ padding-left: 10px;
     font-size: 28px;
     font-weight: 600;
     margin-top: 70px;
-   padding-left: 10px;
+   padding-left: 10px;margin-left: 50px;
+
+  
 }
 
 
@@ -342,13 +353,12 @@ padding-left: 10px;
     background-image: url('../../../public/Frame.png');
     background-repeat: no-repeat;
     background-position: center;
-   
+   max-width:1800px ;
     width: 1430px;
     text-align: center;
     margin-top: 50px;
     padding: 100px;
- position: relative;
- left: -60px;
+ 
     
    
 } image is in public folder
@@ -431,6 +441,30 @@ padding-left: 10px;
     margin-top: 70px;
 }
 .nem{
-    margin-left: 80px;
+    margin-left: 110px;
     margin-bottom: -50px;
 }
+.regions-section11 {
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+    text-align: center !important;
+    flex-direction: column !important; /* This ensures that the content stays in a column layout */
+    padding: 20px;
+    width: 100%;
+    height: 300px;
+}
+
+.bottom-section11 {
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important;
+    text-align: center;
+    padding: 40px 0;
+}
+
+/* .markey{
+    display: flex;
+    justify-content: center !important;
+    /* margin-left: 50px;
+} */
