--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -216,7 +216,8 @@ height: 50px !important;
   width: 25%;
   margin-left: 37.5%;
   margin-top: 10px;
-  border: 1px solid #272848
+  border: 1px solid #272848;
+z-index:9999;
   
 }
 
@@ -477,6 +478,8 @@ position: relative;
   display: flex;
   position: relative;
   top: -310px;
+  z-index:99;
+
 }
 .end-line-sign-up{
 width: 116px;
@@ -1415,7 +1418,7 @@ height: auto;
     width: 70%;
     margin-left: 13%;
     box-sizing: border-box;
-    z-index: 999;
+    z-index: -1000;
   }
 
   .custom-modal .form-label {
