--- a/src/components/patientBlog/blog.css
+++ b/src/components/patientBlog/blog.css
@@ -38,6 +38,8 @@
   flex-direction: column;
   justify-content: center;
   width: 464px;
+  text-align: justify;
+  text-align-last: left;
 }
 
 .featured-details h2 {
@@ -58,7 +60,7 @@
   flex-direction: column;
   /* justify-content: space-between; */
   height: 395px;
-  /* width: 301px; */
+  width: 301px;
   overflow-y: auto;
   margin-left: 0px;
   max-width: 100%;
@@ -115,12 +117,12 @@
   flex: 2;
   margin: 5px;
   padding: 10px;
-  margin-top: 0px;
+  margin-top: 50px;
   border: 1px solid gainsboro;
   border-radius: 8px;
   width: 400px;
   /* height: 780px; */
-  margin-left: 160px;
+  margin-left: 40px;
   position: relative;
   left: 10px;
 
@@ -220,6 +222,7 @@
 .post-meta img {
   width: 110px;
   height: 100px;
+  object-fit: cover;
 }
 
 .post-author {
@@ -243,11 +246,15 @@
   color: #333;
   margin-bottom: 5px;
   overflow: hidden;
+  text-align: justify;
+  text-align-last: left;
 }
 
 .post-content p {
   color: #666;
   margin-bottom: 10px;
+  text-align: justify;
+  text-align-last: left;
 }
 
 .treatment-section {
@@ -843,7 +850,7 @@
 }
 
 .recentBlog-card-title {
-  font-size: 0.9em;
+  font-size: 0.7em;
   color: #1a1a1a;
   font-weight: 500;
   margin: 0 0 7px 0;
@@ -1040,7 +1047,7 @@
 /* treatment */
 .parent {
   /* border: 1px solid black; */
-
+  margin-right: 10px;
   height: max-content;
   display: flex;
   flex-direction: row;
@@ -1084,7 +1091,8 @@
   width: 150px;
   height: 300px;
   object-fit: cover;
-  margin-right: 20px;
+  /* margin-right: 20px; */
+  margin:20px
   /* border-radius: 8px; */
 }
 
@@ -1099,6 +1107,7 @@
 .post-meta-last img {
   width: 578px;
   height: 270px;
+  object-fit: cover;
 }
 
 .post-author-last {
@@ -1122,11 +1131,15 @@
   color: #333;
   margin-bottom: 5px;
   overflow: hidden;
+  text-align: justify;
+  text-align-last: left;
 }
 
 .post-content-last p {
   color: #666;
   margin-bottom: 10px;
+  text-align: justify;
+  text-align-last: left;
 }
 .tags {
   border-bottom: 1px solid rgb(223, 221, 221);
@@ -1146,6 +1159,3 @@
   padding: 5px 10px; /* Padding around text */
   font-size: 14px; /* Font size of the text */
 }
-
-
-
