--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -298,12 +298,16 @@ left: 50px;
 position: relative;
 
 }
+.running-container{
+  position: relative;
+  top: 249px !important;
+left: -1159px !important;
+}
 .curvedesign{
   position: relative;
   width: 565px;
 height: 117px;
-top: 249px;
-left: -1159px;
+
 
 
 }
@@ -311,30 +315,34 @@ left: -1159px;
   position: relative;
   width: 205px;
 height: 22px;
-top: 290px;
-left: -1542px;
+
 font-family: 'Matter', sans-serif;
 font-size: 16px;
 font-weight: 600;
 line-height: 19.2px;
-text-align: left;
+top: -42%;
+left: 32%;
 color: #272848;
 white-space: nowrap;
 
+}
+.running-container-two{
+  position: relative;
+  left: 310px;
+  top: 50px;
 }
 .curvedsigntwo{
   position: relative;
   width: 565px;
 height: 117px;
-left: 310px;
-top: 50px;
+
 }
 .running-text-two{
   position: relative;
   width: 205px;
 height: 37px;
-top: -30px;
-left: 500px;
+left: 190px;
+top: -45%;
 
 font-family: 'Matter', sans-serif;
 font-size: 13px;
@@ -1525,7 +1533,7 @@ height: auto;
 @media (min-width:1024px) and (max-width: 1439px) {
   .form-overall-container {
     position: relative;
-    top: -130px;
+    top: -90px;
     left: 20%;
   }
 
@@ -1549,7 +1557,7 @@ height: auto;
   .model-header {
     width: 100%;
     height: auto;
-    top: 10vh;
+    top: 4vh;
     left: 57.5%;
     font-family: 'Matter', sans-serif;
     font-size: 2vw;
@@ -1564,7 +1572,7 @@ height: auto;
     position: relative;
     width: 100%;
     height: auto;
-    top: 12vh;
+    top: 5vh;
     left: 57.5%;
     font-family: 'Matter', sans-serif;
     font-size: 1.5vw;
@@ -1596,43 +1604,43 @@ height: auto;
   }
 
   .brand-image-logo {
-    width: 10vw;
-    height: 50px;
+
     position: relative;
-    top: -2vh;
-    left: 5vw;
+    top: -6vh;
+    left: 0vw;
   }
 
-  .curvedesign {
-    position: relative;
-    width: 120vw;
-    height: auto;
-    top: 25vh;
-    left: -35vw;
-  }
+.running-container{
+  position: relative;
+  top: 30px !important;
+left: -199px !important;
+}
   
   .curvedesign {
-    position: relative;
-    width: 120vw;
-    height: auto;
-    top: 25vh;
-    left: -35vw;
+    width: 565px;
+    height: 117px;
+    margin-left: auto;
+    margin-right: auto;
+    left: -36%; 
+    top: 200px;
+    justify-content: center;
   }
   
   .running-text {
     width: 205px;
     height: 22px;
-    top: 290px;
-    left:-743px;
-    font-family: 'Matter', sans-serif;
+    top: 125px;
+    left: -36%;
+    font-family: Matter;
     font-size: 16px;
     font-weight: 600;
     line-height: 19.2px;
     text-align: left;
     color: #272848;
     white-space: nowrap;
-    position: relative;
-
+margin-left: auto;
+justify-content: center;
+margin-right: auto;
 
 
   }
@@ -1740,14 +1748,12 @@ height: auto;
   
   .or-sign-up-container {
     display: flex;
-
-
     width: 100%;
     position: relative;
-    top: 10px;
+    top: -360px;
     flex-direction: column;
     justify-content: center; 
-    left: 200px;
+    left: 00px;
     margin-left: auto; 
     margin-right: auto;
   }
@@ -1896,7 +1902,11 @@ height: auto;
   position: absolute; 
 }
 
-
+.running-container{
+  position: relative;
+  top: 0px !important;
+left: -199px !important;
+}
 .curvedesign {
   width: 565px;
   height: 117px;
@@ -1908,7 +1918,7 @@ height: auto;
   width: 205px;
   height: 22px;
   top: 530%;
-  left: 11.5%;
+  left: 180px;
   font-family: Matter;
   font-size: 16px;
   font-weight: 600;
@@ -1917,19 +1927,22 @@ height: auto;
   color: #272848;
   white-space: nowrap;
 }
+.running-container-two{
+  position: relative;
+  top: 0%;
+  left: 52%;
+}
 
 .curvedsigntwo {
   width: 565px;
   height: 117px;
-  top: 0%;
-  left: 65%;
+
 }
 
 .running-text-two {
   width: 205px;
   height: 37px;
-  top: 80%;
-  left: 78%;
+top: 75%;
   font-family: Matter;
   font-size: 13px;
   font-weight: 600;
@@ -1973,7 +1986,7 @@ height: auto;
 
 .form-overall-container {
   position: relative;
-  top: -70px;
+  top: -10px;
   width: 100%;
   padding: 0 10px;
   box-sizing: border-box;
@@ -1981,10 +1994,10 @@ height: auto;
 .or-sign-up-container {
   display: flex;
 
-
+top: -340px;
   width: 100%;
   position: relative;
-  top: 85px;
+
   flex-direction: column;
   justify-content: center; 
 }
@@ -2060,6 +2073,13 @@ text-align: left;
 color: #27272766;
 margin-left: auto;
 margin-right: auto;
+
+}
+.brand-image-logo{
+
+top: -50px;
+left: 50px;
+position: relative;
 
 }
   }
