--- a/src/components/login/changepassword.css
+++ b/src/components/login/changepassword.css
@@ -21,7 +21,16 @@ height: auto;
 .toast-center .Toastify__toast-icon {
   color:#0067FF; 
 }
- 
+.running-container{
+  position: relative;
+  top: 249px !important;
+left: -1159px !important;
+}
+.running-container-two{
+  position: relative;
+  left: 310px;
+  top: 50px;
+}
   .model-header-change-password{
     width: 287px;
     height: 22px;
