--- a/src/components/InsuranceEdit/InsuranceEdit.css
+++ b/src/components/InsuranceEdit/InsuranceEdit.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Matter:wght@400;500;600;700&display=swap');
-
+.insurance-background{
+  background-color: #ffffff !important;
+  width: 880px;
+  height: 136px;
+  position: relative;
+  left: 500px;
+  top: -410px;
+  border-radius: 10px;
+}
 .accepted-area{
     position: relative;
 top:-200px;
@@ -8,22 +16,24 @@ top:-200px;
 }
 .accepted-section-edit{
   position: relative;
-  top:-450px;
+  top:0px;
 }
 .accepted-section-edit h2{
   position: relative;
     font-family: 'Matter', sans-serif;
-    font-weight: 700;
-    font-size: 36px;
+    font-weight: 500;
+    font-size: 22px;
     line-height: 25px;
     text-align: center;
     margin-top: 50px;
-    top: -40px;
+    top: 15px;
+left:-300px;
 }
 
 .insurance-logo {
     margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: -20px;
+    
   }
 
 
@@ -33,7 +43,11 @@ top:-200px;
   .aetna{
     width: 138px;
     height: 34px;
+    position: relative;
+    left: -300%;
+    top: 40px;
   }
+
 
   .Blue-Cross{
     width: 105px;
