--- a/src/components/Faq/FAQ.css
+++ b/src/components/Faq/FAQ.css
@@ -4,25 +4,32 @@
   padding: 0;
   box-sizing: border-box;
 } */
-
+.faq-background{
+  box-shadow: 0px 15px 55px -10px #00000017;
+  position: relative;
+  width:880px;
+  height: 487px;
+  left: 500px;
+  top: -130px;
+}
 .faq {
   position: relative;
 
   /* background-color: #ffffff; */
 
   margin: 0 auto;
-  top: -100px;
+  top: -20px;
 }
 
 .heading {
-  width: 681px;
-height: 67px;
-top: 15px;
-left: 419.76px;
+  width: 356px;
+height: 25px;
+top: 60px;
+left: 0px;
 font-family: 'Matter', sans-serif;
-font-size: 48px;
+font-size: 20px;
 font-weight: 600;
-line-height: 67px;
+line-height: 25px;
 text-align: center;
 color: #1B3C74;
   position: relative;
@@ -42,15 +49,16 @@ margin-left: 100px;
   position: relative;
   width: 522px;
   height: 499.84px;
+  left: -180px;
 
 
 }
 .smile-emoji-container{
   position: relative;
-  width: 241.93px;
-height: 104.59px;
-top: -180px;
-left: 10px;
+  width: 146.93px;
+height: 64.59px;
+top: -140px;
+left: 85px;
 border-radius: 8px ;
 
 background: #FFFFFF;
@@ -58,21 +66,21 @@ box-shadow: 0px 15px 35px -5px #00000012;
 
 }
 .smile-emoji-faq{
-  width: 44px;
-height: 44px;
-top: 31.29px;
-left: 22px;
+  width: 30px !important;
+height: 30px !important;
+top: 18px;
+left: 16px;
 position: relative;
 
 }
 .people-count-faq{
   position: relative;
-  width: 62px;
-height: 34px;
+  width: 52px;
+height: 24px;
 top: -25px;
-left: 81px;
+left: 51px;
 font-family: 'Matter', sans-serif;
-font-size: 24px;
+font-size: 16px;
 font-weight: 600;
 line-height: 33.6px;
 text-align: center;
@@ -83,10 +91,10 @@ color: #1B3C74;
   position: relative;
   width: 129px;
 height: 28px;
-top: -40px;
-left: 78px;
+top: -38px;
+left: 35px;
 font-family: 'Matter', sans-serif;
-font-size: 17px;
+font-size: 12px;
 font-weight: 400;
 line-height: 28px;
 text-align: center;
@@ -95,10 +103,10 @@ color: #77829D;
 }
 .heart-hands-container{
   position: relative;
-  width: 80px;
-height: 80px;
-top: -286.82px;
-left: 555px;
+  width: 40px;
+height: 40px;
+top: -266.82px;
+left: 305px;
 padding: 19.84px 0px 20.16px 0px;
 border-radius: 40px;
 background: #FFFFFF;
@@ -110,8 +118,8 @@ box-shadow: 0px 15px 25px 0px #0000000F;
 .faq-image-doctor{
 
   position: relative;
-  width: 500px;
-  height: 479px;
+  width: 305px;
+  height: 362px;
   
   top: 10px;
   left: 110px;
@@ -127,10 +135,10 @@ box-shadow: 0px 15px 25px 0px #0000000F;
 
 .hand-heart{
   position: relative;
-  width: 80px;
-height: 40px;
-top: .84px;
-left: -0.16px;
+  width: 35px;
+height: 35px;
+top: -18px;
+left: 4px;
 
 
 }
@@ -145,7 +153,8 @@ left: -0.16px;
   justify-content: center;
   gap: 40px;
   text-align: start;
-  margin-left: 20px;
+  margin-left: -100px;
+  top: -50px;
 }
 
 /* .faq-item {
@@ -153,7 +162,7 @@ left: -0.16px;
 
 .faq-question {
   position: relative;
-  width: 381px;
+  width: 369px;
 height: 30px;
 top: -30px;
 left: 15px;
@@ -163,7 +172,7 @@ cursor: pointer;
 font-weight: bold;
 color: #1B3C74;
 font-family: 'Matter', sans-serif;
-font-size: 19px;
+font-size: 16px;
 font-weight: 600;
 line-height: 30px;
 text-align: left;
