--- a/src/components/FilterPage/filter.css
+++ b/src/components/FilterPage/filter.css
@@ -10,7 +10,42 @@
     margin: 118px 25px 0 10px;
    
 }
-  
+.select-container-filter .scrollable-container {
+    max-height: 200px; /* Adjust the height to fit 8 conditions */
+    overflow-y: auto;
+    padding-right: 10px; /* To avoid cutting off the scroll bar */
+}
+
+.checkbox-group {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Scrollbar design for WebKit browsers (Chrome, Safari, etc.) */
+.scrollable-container::-webkit-scrollbar {
+    width: 6px; /* Thin scrollbar width */
+}
+
+.scrollable-container::-webkit-scrollbar-track {
+    background: #f1f1f1; /* Track color */
+}
+
+.scrollable-container::-webkit-scrollbar-thumb {
+    background-color: #FF7F50; /* Scrollbar color */
+    border-radius: 10px; /* Rounded edges for smoothness */
+}
+
+.scrollable-container::-webkit-scrollbar-thumb:hover {
+    background-color: #FF7F50; /* Darker shade when hovered */
+}
+
+/* For Firefox */
+.scrollable-container {
+    scrollbar-width: thin; /* Makes the scrollbar thinner */
+    scrollbar-color: #FF7F50 #f1f1f1; /* Scrollbar color and track color */
+}
+
+
 .filter-heading-reset {
     display: flex;
     align-items: center;
