--- a/src/components/LanguagesEdit/LanguageEdit.css
+++ b/src/components/LanguagesEdit/LanguageEdit.css
@@ -1,21 +1,38 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Matter:wght@400;500;600;700&display=swap');
 
+.languages-row {
+  display: flex;
+  flex-direction: row;  /* Ensure items are in a row */
+  flex-wrap: nowrap;    /* Prevent wrapping */
+  gap: 15px;            /* Space between items */
+}
+
+.language-item {
+  display: flex;
+  align-items: center;
+}
+
+.language-item img {
+  margin-right: 8px;   /* Space between the tick icon and text */
+}
 
 .languages-container-edit {
     padding: 20px;
     position: relative;
-    top: -200px;
+    top: 70px;
+    left: -220px;
   }
 
   .languages-container-edit h2 {
     position: relative;
     font-family: 'Matter', sans-serif;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 25px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
     color: #272848;
 top: 15px;
+left: -145px;
   }
   
   .language-item {
