--- a/src/components/DoctorEdit/doctoredit.css
+++ b/src/components/DoctorEdit/doctoredit.css
@@ -289,7 +289,7 @@ top: 60px;
 
 .edit-profile-disease{
   display: flex;
-  width: 400px;
+  width: 500px !important;
 height: 18px;
 top: 0px;
 left: 2%;
@@ -434,7 +434,7 @@ line-height: 18px;
 
 .verify-doctor-button{
   position: relative;
-  width: 160px;
+  width: 260px;
 height:42px;
 top: 248px;
 left: 160px;
@@ -445,7 +445,7 @@ border: none;
 border: 1px solid #0167FF;
 color: #0167FF;
 font-family: Matter;
-font-size: 16px;
+font-size: 14px;
 font-weight: 400;
 line-height: 18px;
 }
