--- a/src/components/ProfileItem/Notification/Notification.css
+++ b/src/components/ProfileItem/Notification/Notification.css
@@ -1,10 +1,10 @@
 .notification-card {
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  /* border: 1px solid #ccc; */
+  border-radius: 10px;
   padding: 15px;
   background-color: #fff;
-  max-width: 950px;
-  margin: auto;
+  width: 100%;
+  /* margin: auto; */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
   max-height: 550px; /* Adjust height as needed */
