--- a/src/components/DoctorProfileH/Article.css
+++ b/src/components/DoctorProfileH/Article.css
@@ -8,7 +8,7 @@
     max-width: 100%;
     background-color: white;
     border-radius: 1rem;
-    width: 65%; 
+    /* width: 65%;  */
 }
 
 .articles h2 {
@@ -29,72 +29,22 @@
 .article-card {
     display: flex;
     flex-direction: column;
-    width: 330px;
+    /* width: 330px; */
     border: 1px solid;
     background-color: rgba(255, 255, 255, 0.1); /* Equivalent to bg-opacity-10 */
-    border-color: #d7d7d9; /* Blue-950 */
+   
 }
 
 .article-card img {
     object-fit: contain;
     width: 100%;
-    aspect-ratio: 1; /* Maintains square aspect ratio */
-    margin-top: 0; /* Adjust as needed for mobile */
+       margin-top: 0; /* Adjust as needed for mobile */
 }
 
 .card-content {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    padding: 1rem 0.5rem; /* Padding adjusted */
-    margin: auto;
+    
     width: 100%;
 }
 
-.card-header {
-    display: flex;
-    gap: 0.625rem; /* 2.5 spacing */
-}
-
-.category {
-    font-size: 0.75rem; /* text-xs */
-    font-weight: 500; /* font-medium */
-    color: rgb(58, 57, 57); /* Blue-600 */
-}
-
-.date {
-    margin-top: 0.625rem; /* mt-2.5 */
-    font-size: 0.75rem; /* text-xs */
-    color: #6b7280; /* Neutral-500 */
-}
-
-.title {
-    margin-top: 0.625rem; /* mt-2.5 */
-    font-size: 1rem; /* Equivalent to base size */
-    color: rgb(58, 57, 57);; /* Slate-800 */
-}
-
-.read-time {
-    align-self: center;
-    font-size: 0.75rem; /* text-xs */
-    color: #6b7280; /* Neutral-500 */
-}
-
-.content {
-    margin-top: 0.375rem; /* mt-1.5 */
-    font-size: 0.75rem; /* text-xs */
-    line-height: 1.25; /* leading-4 */
-    color: rgba(31, 41, 55, 0.7); /* Neutral-800 with opacity */
-}
-
-.learn-more {
-    display: flex;
-    gap: 0.625rem; /* 2.5 spacing */
-    width: 100%;
-    padding: 0.25rem 1rem; /* px-4 py-px */
-    margin-top: 1rem; /* mt-4 */
-    font-size: 0.875rem; /* text-xs */
-    font-weight: 500; /* font-medium */
-    border-radius: 0.375rem; /* rounded-md */
-    min-height: 26px; /* min-h-[26px] */
-}
