--- a/src/components/DoctorProfileH/Faq.css
+++ b/src/components/DoctorProfileH/Faq.css
@@ -6,7 +6,7 @@
   /* margin-left: 35%; */
   background-color: white;
   border-radius: 1rem;
-  width: 65%;
+  /* width: 65%; */
   margin-bottom: 50px;
 }
 
