--- a/src/components/DoctorProfileH/Maincontent.css
+++ b/src/components/DoctorProfileH/Maincontent.css
@@ -1,45 +1,23 @@
-.main {
+.main-content {
+    padding: 20px;
+  }
+  
+  .content-container {
     display: flex;
-    flex-direction: column;
-    /* align-items:center; */
-    /* padding-left: 20px;
-    padding-right: 20px; */
-    /* margin-top: 10px; */
-    /* width: 100%; */
-}
-
-@media (max-width: 768px) {
-    .main {
-        padding-left: 5px;
-        padding-right: 5px;
-        margin-top: 10px;
-        max-width: 100%;
-    }
-}
-
-.self-stretch {
-    align-self: stretch;
-}
-
-@media (max-width: 768px) {
-    .self-stretch {
-        max-width: 100%;
-    }
-}
-
-.flex {
+    flex-direction: row;
+  }
+  
+  .flex-row {
     display: flex;
-}
-
-.flex-col {
-    flex-direction: column;
-}
-
-
-@media (max-width: 768px) {
-    .flex-col {
-        flex-direction: column;
-    }
-}
-
-/* You can add any additional styles for DoctorProfile, DoctorInfo, Articles, and FAQ if needed */
+    flex-direction: row;
+  }
+  
+  .profile-container {
+    flex: 1; /* Adjust as needed */
+    margin-right: 20px; /* Spacing between profile and info */
+  }
+  
+  .info-container {
+    flex: 2; /* Adjust to take remaining space */
+  }
+  
