--- a/src/components/FilterPage/mapcontainer.css
+++ b/src/components/FilterPage/mapcontainer.css
@@ -182,6 +182,10 @@
     background-color: #0056b3;
 }
 
+.gm-ui-hover-effect {
+    display: none !important;
+}
+
 /* Responsive Design */
 /* @media (max-width: 1200px) {
     .mapContainer {
